Bug 21750 - Samsung Syncmaster 2333HD LCD monitor reports incorrect displaysize
Summary: Samsung Syncmaster 2333HD LCD monitor reports incorrect displaysize
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: 7.4 (2008.09)
Hardware: All All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-15 07:39 UTC by Peter Poklop
Modified: 2009-05-17 03:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log (62.54 KB, text/plain)
2009-05-15 07:40 UTC, Peter Poklop
no flags Details

Description Peter Poklop 2009-05-15 07:39:46 UTC
Samsung Syncmaster 2333HD LCD monitor reports incorrect displaysize (518mm x 32mm) which leads to very large font sizes in kdm and kde.

With the entry "DisplaySize" in xorg.conf i can wokraround the issue when connected with vga. With a dvi connection the problem remains.
Comment 1 Peter Poklop 2009-05-15 07:40:38 UTC
Created attachment 25889 [details]
xorg log
Comment 2 Julien Cristau 2009-05-17 03:18:53 UTC
thanks for the report.  should be fixed with:

commit 2be5eecb4b0f30b9c55d12521415edbb88c1f8fd
Author: Julien Cristau <jcristau@debian.org>
Date:   Fri May 15 17:29:32 2009 +0200

    xfree86: add edid quirk for Samsung Syncmaster 2333HD

    It reports vertical size in cm in the detailed mode.
    X.Org bug#21750 <http://bugs.freedesktop.org/show_bug.cgi?id=21750>

    Reported-by: Peter Poklop <Peter.Poklop@gmx.at>
    Signed-off-by: Julien Cristau <jcristau@debian.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.